# MESSER_for_3DGS

./: README.md  README.txt  package.xml  setup.cfg  setup.py
airlab_functions/: colmap_pose_prior.py  fast_lio_img_transf_capture.py  isaac_image_capture.py  isaac_pc_cat.py  isaacsim_subscriber.py  pointcloud_accumulator.py  rename_images.py  rgb_pcl_capture.py  rgb_pcl_visualizer.py  rgb_transf_capture.py  subscriber.py  tester_repub.py
calibration_testing/isaac_sim/: calib.json
calibration_testing/ouster_realsense/: calib.json
example_stage_warehouse/: transformations.csv
python scripts/: color_point_cloud.py  convert_to_colmap.py  dl_image_example.py  generate_color_list.py  isaac_sim_calib.py  pcd_concatenator.py  pcd_concatenator_test.py  pcd_visualizer.py  rgbd_to_pcd.py  transform_tester
python scripts/extra_utility_beta/: make_depth.py  ouster_realsense_calib.py  pcd_concatenator_test.py  pcd_visualizer.py  post_process_gaussian_splat.py  rename_images.py
ros2/: isaacsim_subscriber.py  pointcloud_accumulator.py  rgb_transf_subscriber.py  subscriber.py
ros2/utility/: pc_repub.py
