<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>airlab_functions</name>
  <version>0.0.1</version>
  <description>A package for preparing SfM free reconstruction for use with 3DGS </description>
  <maintainer email="jonathan@majj.dk">jonathan</maintainer>
  <license>Apache-2.0</license>
  
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>open3d</exec_depend>
  <exec_depend>ros2_numpy</exec_depend>
  <exec_depend>scipy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
